# Multi-Agent-Research-Assistant-System

./: README.md  api.py  main.py  pyproject.toml  report_buddhism_vs_catholic.txt  report_our_earth_shape_is_spherical_o.txt  report_what_is_psychology.txt  report_what_is_the_biggest_flood_in_s.txt  report_why_we_important_vesak_festiva.txt
agents/: analyst.py  critic.py  fact_checker.py  researcher.py  writer.py
graph/: workflow.py
research-frontend/: package-lock.json  package.json
research-frontend/src/: App.css  App.js
tools/: search_tools.py
utils/: state.py
